# LaTeam

./: README.md  pyproject.toml
ransomware_simulation/: Makefile  README.md  decrypt.py  encrypt.py  main.py  message.py  send_email.py
ransomware_simulation/dossier_confidentiel/: doc.pdf.enc  doc.xlsx  doc.xlsx.enc
