[tool.poetry]
name = "cybersecurity"
version = "0.1.0"
description = ""
authors = ["Makhtar99 <127096437+Makhtar99@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pycryptodome = "^3.21.0"
keyboard = "^0.13.5"
tk = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
